[gd_scene load_steps=17 format=3 uid="uid://cw4lchcgmj2di"]

[ext_resource type="Script" path="res://scripts/NPCs/enemy/enemy_brain.gd" id="1_0vn7x"]
[ext_resource type="PackedScene" uid="uid://bw6x2kh6con1i" path="res://scenes/components/pathfinding.tscn" id="1_fjiuf"]
[ext_resource type="Script" path="res://scripts/NPCs/npc_movement.gd" id="2_xxiie"]
[ext_resource type="Script" path="res://scripts/NPCs/waypoints.gd" id="4_q18cr"]
[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="5_qtq4a"]
[ext_resource type="Script" path="res://scripts/NPCs/states/patrol.gd" id="6_c0cb4"]
[ext_resource type="Script" path="res://scripts/NPCs/states/idle.gd" id="7_h2kdt"]
[ext_resource type="Script" path="res://scripts/NPCs/states/stuned.gd" id="8_0g4f3"]
[ext_resource type="Script" path="res://scripts/NPCs/states/hunting.gd" id="8_dqbjy"]
[ext_resource type="PackedScene" uid="uid://85wl8t821pag" path="res://scenes/components/player_detection.tscn" id="9_33r6y"]
[ext_resource type="Script" path="res://scripts/NPCs/states/reloading.gd" id="10_jh1w1"]
[ext_resource type="PackedScene" uid="uid://01unuqdc8eem" path="res://tools/TestingHolder.tscn" id="12_2ypny"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cftyc"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8me8j"]

[sub_resource type="PrismMesh" id="PrismMesh_rp6l7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f4l8y"]
albedo_color = Color(0.886275, 0.117647, 0.239216, 1)

[node name="EnemyBasic" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_0vn7x")
stun_time = 5.0
reload_time = 4.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03452, 0)
shape = SubResource("CapsuleShape3D_cftyc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03452, 0)
mesh = SubResource("CapsuleMesh_8me8j")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 3.0
path_max_distance = 5.01
avoidance_enabled = true
radius = 5.0
debug_enabled = true
debug_path_custom_color = Color(0.952941, 0, 0.258824, 1)
debug_path_custom_point_size = 6.25

[node name="Pathfinding" parent="." node_paths=PackedStringArray("waypoints_manager") instance=ExtResource("1_fjiuf")]
waypoints_manager = NodePath("../WayPoints")

[node name="NPCMovement" type="Node" parent="."]
script = ExtResource("2_xxiie")

[node name="WayPoints" type="Node" parent="."]
script = ExtResource("4_q18cr")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_qtq4a")
initial_state = NodePath("Patrol")

[node name="Patrol" type="Node" parent="StateMachine"]
script = ExtResource("6_c0cb4")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("7_h2kdt")
min_idle_time = 10
max_idle_time = 25

[node name="Timer" type="Timer" parent="StateMachine/Idle"]
one_shot = true

[node name="Stuned" type="Node" parent="StateMachine"]
script = ExtResource("8_0g4f3")

[node name="Timer" type="Timer" parent="StateMachine/Stuned"]
one_shot = true

[node name="Hunting" type="Node" parent="StateMachine"]
script = ExtResource("8_dqbjy")

[node name="Timer" type="Timer" parent="StateMachine/Hunting"]
one_shot = true

[node name="Reloading" type="Node" parent="StateMachine"]
script = ExtResource("10_jh1w1")

[node name="Timer" type="Timer" parent="StateMachine/Reloading"]
one_shot = true

[node name="head" type="MeshInstance3D" parent="."]
transform = Transform3D(0.814808, 0, 0, 0, 0.677197, 0, 0, 0, 0.61511, 0, 1.53832, -0.282807)
mesh = SubResource("PrismMesh_rp6l7")
surface_material_override/0 = SubResource("StandardMaterial3D_f4l8y")

[node name="PlayerDetection" parent="head" instance=ExtResource("9_33r6y")]
visual_indicator = true

[node name="TestingHolder" parent="." instance=ExtResource("12_2ypny")]
